[SWITCHYARD-416] - Added OpenShift Express distribution